# metronome

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  Cargo.toml  ICED_REWRITE.md  README.md  e2e_clean.sh  e2e_test.py  fetch-missing-deps.sh  install.sh  meson.build  meson_options.txt  metronome.doap  package-windows.sh  setup-msys2-sysroot.sh
.github/workflows/: build.yml  ci.yml
build-aux/: com.adrienplazas.Metronome.Devel.json  com.adrienplazas.Metronome.json
data/: com.adrienplazas.Metronome.desktop.in.in  com.adrienplazas.Metronome.gschema.xml.in  com.adrienplazas.Metronome.metainfo.xml.in.in  meson.build  resources.gresource.xml
data/resources/: meson.build  resources.gresource.xml  style.css
data/soundfonts/: metronome_clicks.sf2
e2e/: helpers.py  test_chord_mode.py  test_inversion.py  test_mute.py  test_non_diatonic.py  test_pentatonic.py  test_scale_info.py  test_tab_player.py
po/: LINGUAS  POTFILES.in  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  ka.po  kk.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po  vi.po  (+1 more)
src/: application.rs  chord_builder.rs  clicker.rs  fluidsynth_ffi.rs  fretboard.rs  gp5_parser.rs  gp7_parser.rs  guitar_player.rs  main.rs  main_iced.rs  meson.build  portable_settings.rs  recent_files.rs  scale_data.rs  scales_page.rs  tab_audio_thread.rs  tab_fretboard.rs  tab_midi.rs  tab_models.rs  tab_player_page.rs  tab_strip.rs  theme.rs  theme_dialog.rs  theme_editor.rs  theme_manager.rs  timer.rs  timerbutton.rs  timerbuttonmark.rs  timerbuttontrough.rs  window.rs
src/ui/: audio.rs  fretboard_canvas.rs  metronome_page.rs  mod.rs  scales_page.rs  settings.rs  tab_fretboard_canvas.rs  tab_player_page.rs  tab_strip_canvas.rs
tests/fixtures/: gp5_reference.json  gp5_reference_13.json  gp5_reference_14.json  gp5_reference_16.json  gp5_reference_17.json  gp5_reference_18.json  gp7_reference_1.json  gp7_reference_10.json  gp7_reference_11.json  gp7_reference_12.json  gp7_reference_15.json  gp7_reference_2.json  gp7_reference_3.json  (+43 more)
themes-export/: catppuccin-mocha.json  dracula.json  gruvbox-dark.json  nord.json
(+19 files in other folders)
