[package]
name = "metronome"
version = "0.1.0"
authors = ["Adrien Plazas <kekun.plazas@laposte.net>"]
edition = "2021"
rust-version = "1.70"

[dependencies]
log = "0.4"
pretty_env_logger = "0.5.0"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
once_cell = "1.18"
gtk = { version = "0.7", package = "gtk4", features = ["v4_10"] }
adw = { version = "0.5", package = "libadwaita", features = ["v1_4"] }
gst = { version = "0.21.0", package = "gstreamer" }
gstreamer-play = "0.21.0"
