[package]
name = "metronome"
version = "0.1.0"
authors = ["Adrien Plazas <kekun.plazas@laposte.net>"]
edition = "2021"
rust-version = "1.70"

[dependencies]
log = "0.4"
pretty_env_logger = "0.5.0"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.8", package = "gtk4", features = ["v4_12"] }
adw = { version = "0.6", package = "libadwaita", features = ["v1_5"] }
gst = { version = "0.22", package = "gstreamer" }
gstreamer-play = "0.22"
gst-app = { version = "0.22", package = "gstreamer-app" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
